--- a/styles/variables.css
+++ b/styles/variables.css
@@ -16,6 +16,7 @@
     --clr-d-text: white;
     --clr-d-secondary: #ce84eb;
     --clr-d-card: rgb(62, 62, 62);
+    --clr-d-hcard: black;
 
     /* FONT SIZES -- d = desktop, m = mobile */
     --fs-h1-d: 48px;
